--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -1,10 +1,13 @@
 <% if(user){%>
     <nav>
-        <div class="flex">
+        <div class="flex items-center">
+            <i class="fas fa-bars text-4xl relative text-blue-500 mr-3"></i>
             <div class="logo-img"><img src="/images/logo.jpg" onclick="location.href='/'"></div>
-            <a href="/my-boards" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
-            <a href="/teams" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
-            <div class="w-1/5 ml-4 relative">
+            <div class="nav-links z-10">
+                <a href="/my-boards" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Boards</a>
+                <a href="/teams" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
+            </div>
+            <div class="search-bar sm:w-2/6 w-1/5 ml-4 relative ">
                 <input class="js-search bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Search">
                 <div class="result absolute bg-gray-100 rounded w-64 mt-2 hidden p-3">
                     <h4 class="font-bold text-lg mb-2 text-gray-700">Boards</h4>
@@ -12,14 +15,15 @@
                     </ul>
                 </div>
             </div>
-            <div class="nav-auth">
+            <div class="nav-auth flex items-center justify-around">
                 <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
                 <% if(user.image){ %>
-                    <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
+                    <img class=" h-10 w-10 rounded-full mx-auto mr-3 inline-block" src="./images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
                     <% } else { %>
-                        <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/avatar.png" onclick="location.href='/my-profile'">
+                        <img class=" h-10 w-10 rounded-full mx-auto mr-3 inline-block" src="/images/avatar.png" onclick="location.href='/my-profile'">
                         <% }  %>
                             <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="location.href = '/logout'">Log out</button>
+                            <i class="fas fa-sign-out-alt text-4xl  text-blue-500" onclick="location.href = '/logout'"></i>
             </div>
         </div>
     </nav>
@@ -36,3 +40,5 @@
             </div>
         </nav>
         <% }%>
+
+            <script src="/JS/navHandler.js"></script>
