added sort/swap client side

--- a/Views/pages/board-details.ejs
+++ b/Views/pages/board-details.ejs
@@ -12,7 +12,7 @@
             </div>
 
 
-            <div class="lists flex flex-1">
+            <div id="Lists" class="lists flex flex-1">
 
                 <% lists.forEach(list => {%>
                     <div id="<%= list.id %>" class="list  mx-4 relative w-64 bg-gray-200 rounded ">
