--- a/Views/template/head.ejs
+++ b/Views/template/head.ejs
@@ -20,6 +20,9 @@
     <script src="https://kit.fontawesome.com/e3658e79d2.js" crossorigin="anonymous"></script>
     <!--  jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <!-- jsDelivr :: Sortable :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+
     <link type="image/x-icon" rel="icon" href="/images/logo.jpg">
     <link rel="shortcut icon" href="#" />
 </head>
